# Zeit-ANDROID

./: .gitignore  IDEAS.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/java/com/ddeeaaddlyy/zeit/: MainActivity.kt
app/src/main/java/com/ddeeaaddlyy/zeit/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: main.rs
app/src/main/rust/src/core/: mod.rs
app/src/main/rust/src/core/application/: mod.rs  runner.rs
app/src/main/rust/src/core/application/commands/: command.rs  handler.rs  mod.rs
app/src/main/rust/src/core/config/: settings.rs
app/src/main/rust/src/core/infrastructure/: mod.rs  telegram.rs
app/src/main/rust/src/core/infrastructure/discord_client/: discord.rs
app/src/main/rust/src/core/infrastructure/telegram_client/: mod.rs  telegram.rs  telegram_responce.rs
app/src/main/rust/src/core/telegram/: config.rs  response.rs
app/src/main/rust/src/core/utils/: debug.rs  mod.rs
app/src/test/java/com/ddeeaaddlyy/zeit/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/com/spark11e/bot/service/: DiscordBotService.kt  TelegramBotService.kt
src/main/kotlin/com/spark11e/bot/telegram/: BotCommands.kt
