[package]
name = "zeit_bot"
version = "0.1.0-unrelease"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"